use state for temporary storage

--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,6 @@
-
 @font-face {
   font-family: 'DyslexicFont';
-  src: url('./assets/fonts/OpenDyslexic-Regular.otf') format('opentype');
+  src: url('./assets/fonts/Space Rice.otf') format('opentype');
   font-weight: normal;
   font-style: normal;
 }
@@ -10,6 +9,9 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'DyslexicFont', sans-serif;
 }
 
-
+code {
+  font-family: 'DyslexicFont', sans-serif;
+}
