--- a/src/index.css
+++ b/src/index.css
@@ -10,6 +10,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'DyslexicFont', sans-serif;
+  background-color: #7E60BF;
 }
 
 code {
